--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <li><a href="video.html">video</a></li>
             <li><a href="sermon.html">sermon</a></li>
             <li><a href="upload.html">upload</a></li>
-            <li><a href="about.html" class="active">about us</a></li>
+            <li class="active"><a href="about.html" >about us</a></li>
           
 
         </ul>
