--- a/upload.html
+++ b/upload.html
@@ -45,7 +45,7 @@
             <li><a href="music.html">music</a></li>
             <li><a href="video.html">video</a></li>
             <li><a href="sermon.html">sermon</a></li>
-            <li><a href="upload.html" class="active">upload</a></li>
+            <li class="active"><a href="upload.html" >upload</a></li>
             <li><a href="about.html">about us</a></li>
           
 
