--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav>
 
         <ul>
-            <li><a href="index.html" class="active">home</a></li>
+            <li class="active"><a href="index.html" >home</a></li>
             <li><a href="music.html">music</a></li>
             <li><a href="video.html">video</a></li>
             <li><a href="sermon.html">sermon</a></li>
@@ -51,6 +51,9 @@
 
    </header> 
 
+
+
+   
 
 
 
