--- a/music.html
+++ b/music.html
@@ -39,7 +39,7 @@
 
         <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="music.html" class="active">music</a></li>
+            <li class="active"><a href="music.html"   >music</a></li>
             <li><a href="video.html">video</a></li>
             <li><a href="sermon.html">sermon</a></li>
             <li><a href="upload.html">upload</a></li>
