--- a/sermon.html
+++ b/sermon.html
@@ -46,7 +46,7 @@
             <li><a href="index.html">home</a></li>
             <li><a href="music.html">music</a></li>
             <li><a href="video.html">video</a></li>
-            <li><a href="sermon.html" class="active">sermon</a></li>
+            <li class="active"><a href="sermon.html" >sermon</a></li>
             <li><a href="upload.html">upload</a></li>
             <li><a href="about.html">about us</a></li>
           
