--- a/video.html
+++ b/video.html
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="music.html">music</a></li>
-            <li><a href="video.html" class="active">video</a></li>
+            <li class="active"><a href="video.html" >video</a></li>
             <li><a href="sermon.html">sermon</a></li>
             <li><a href="upload.html">upload</a></li>
             <li><a href="about.html">about us</a></li>
