--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>kingdom rythm</h1>
         </div>
         <div class="menu">
-            <img onclick="showHeader()" src="./image/main-menu.png" alt=""  width="22px">
+            <img onclick="showHeader()" src="./image/main-menu.png" alt=""  width="30px">
         </div>
     
        </div>
@@ -31,7 +31,7 @@
         <h1>kingdom rythm</h1>
     </div>
     <div class="menu1">
-        <img onclick="hideHeader()" src="./image/cross.png" alt="" width="22px">
+        <img onclick="hideHeader()" src="./image/cross.png" alt="" width="30px">
     </div>
 
     
@@ -50,6 +50,10 @@
     </nav>
 
    </header> 
+
+   <section class="hero">
+    <h3>Welcome to the <span>King</span>dom rythm.com home   </h3>
+   </section>
 
 
 
