--- a/index.html
+++ b/index.html
@@ -49,12 +49,23 @@
         </ul>
     </nav>
 
-   </header> 
+ 
+
+   </header>
+<main>
 
    <section class="hero">
-    <h3>Welcome to the <span>King</span>dom rythm.com home   </h3>
+    <h4>Welcome to the <em><span>King</span>dom</em> rythm.com. Here we provide you with pure Gospel songs, hyms, videos, sermon and many other christain related contents.</h4>
    </section>
 
+
+
+   <section class="featured-music">
+    
+   </section>
+
+
+</main>
 
 
    
