--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/querry.css">
 </head>
-<body>
+<body  >
 
 
 
@@ -65,7 +65,35 @@
 
 
 
+<section class="newsletter">
+    <div class="intro">
+        <p>subscribe to our newsletter to get more info from us</p>
+    </div>
 
+    <form action="#">
+        <div class="input-control">
+            <label for="email">email:</label>
+            <input type="email" placeholder="josephadam@gmail.com">
+            <div class="error"></div>
+        </div>
+
+        <div class="input-control">
+            <label for="password">password:</label>
+            <input type="email" placeholder="..........." >
+            <div class="error"></div>
+        </div>
+
+
+
+        <div class="button">
+            <button type="submit">subscribe</button>
+        </div>
+
+
+    </form>
+
+
+</section>
 
 
    <script src="./js/index.js"></script>
