--- a/sermon.html
+++ b/sermon.html
@@ -54,17 +54,28 @@
         </ul>
     </nav>
 
-
-
-
-
-
-
-
-
-
-
    </header> 
+
+
+
+
+   <section class="video-sermon">
+
+    <video controls src="./video/e575715362e840ad8279daeb35178297.mp4"></video>
+    
+
+   
+   </section>
+
+
+
+
+
+
+
+
+
+
    <script src="./js/index.js"></script>
 </body>
 
