--- a/upload.html
+++ b/upload.html
@@ -52,17 +52,18 @@
         </ul>
     </nav>
 
-
-
-
-
-
-
-
-
-
-
    </header> 
+
+
+
+   <section class="upload">
+   
+
+
+
+
+
+
    <script src="./js/index.js"></script>
 </body>
 
