--- a/music.html
+++ b/music.html
@@ -52,9 +52,12 @@
    </header> 
 
 
-   
+   <section class="afro-gospel">
+    
 
-
+    <audio controls src="./music/Frank_Edwards_-_Melody_(Jesusful.com).mp3"></audio>
+     
+   </section>
 
 
 
